# diaspora-stream-octopus

./: AWS_MSK_IAM_INTEGRATION.md  CLAUDE.md  CMakeLists.txt  README.md  spack.yaml
.github/workflows/: codecov.yml  post-template.yml  test.yml
examples/: example.py
include/AAA/: Consumer.hpp  Event.hpp  Producer.hpp  TopicHandle.hpp
include/octopus/: Consumer.hpp  Driver.hpp  Event.hpp  KafkaConf.hpp  Producer.hpp  ThreadPool.hpp  TopicHandle.hpp
src/: Admin.hpp  AwsMskIamSigner.cpp  CMakeLists.txt  Consumer.cpp  Driver.cpp  FutureState.hpp  KafkaHelper.hpp  LibRdKafkaAdmin.cpp  LibRdKafkaAdmin.hpp  OctopusAdmin.cpp  OctopusAdmin.hpp  Producer.cpp  TopicHandle.cpp  octopus-config.cmake.in
tests/: CMakeLists.txt  create-topic-for-benchmark.py  mocktopus-post-test.sh  mocktopus-pre-test.sh  mocktopus.cpp  post-test.sh  pre-test.sh  run-benchmark.sh  run-mocktopus-tests.sh  spack.yaml
